# Hermes-Terminal

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml
config/: hosts.example.yaml  policy.example.yaml
playbooks/: kali-apt-repair.md
scripts/: install.sh
src/hermes_terminal/: __init__.py  app.py  cli.py  config.py  models.py
src/hermes_terminal/ai/: __init__.py  base.py  ollama.py  openai_compatible.py  prompts.py
src/hermes_terminal/audit/: __init__.py  database.py
src/hermes_terminal/hosts/: __init__.py  registry.py
src/hermes_terminal/learning/: __init__.py  context.py
src/hermes_terminal/safety/: __init__.py  classifier.py
src/hermes_terminal/shell/: __init__.py  executor.py
tests/: __init__.py  conftest.py  test_audit.py  test_executor.py  test_ollama.py  test_safety.py
