[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-terminal"
version = "0.1.0"
description = "Remote terminal control system with AI assistant for managing multiple machines via SSH"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Christis King", email = "christis@example.com"}
]

dependencies = [
    "typer[all]==0.12.3",
    "click==8.1.7",
    "rich==13.7.0",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "httpx==0.27.0",
    "paramiko==3.4.1",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "black==24.3.0",
    "ruff==0.4.2",
    "mypy==1.8.0",
]

[project.scripts]
hermes = "hermes_terminal.cli:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
